# driftmonitor

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: daily_collect.yml  daily_evaluate.yml  deploy_pages.yml  monthly_metrics.yml  pipeline.yml  report_build.yml  run_evaluate_and_commit.yml  validate_workflows.yml  weekly_metrics.yml
benchmark/: README.md  __init__.py
benchmark/classifiers/: __init__.py  safety_classifier.py
benchmark/model_runners/: __init__.py  sentiment_runner.py
benchmark/wrappers/: __init__.py  runner_wrapper.py
collectors/google_trends/: README.md  __init__.py  cli.py  collector.py
collectors/hackernews/: README.md  __init__.py  collector.py
collectors/template/: __init__.py  collector.py
data/evaluated/: evaluated_2025-12-14.csv  evaluated_2025-12-15.csv  evaluated_2025-12-16.csv  evaluated_2025-12-17.csv  evaluated_2025-12-18.csv  evaluated_2025-12-19.csv  evaluated_2025-12-20.csv  evaluated_2025-12-21.csv  evaluated_2025-12-22.csv  evaluated_2025-12-23.csv  evaluated_2025-12-24.csv  evaluated_2025-12-25.csv  evaluated_2025-12-26.csv  evaluated_2025-12-27.csv  evaluated_2025-12-28.csv  evaluated_2025-12-29.csv  (+31 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ETHICS.md  README.md  index.html
metrics/: README.md  __init__.py  monthly_metrics.py  utils.py  weekly_metrics.py
report/: __init__.py
scripts/: __init__.py  aggregate_daily.py  aggregate_trends.py  build_dashboard.py  collect_google_trends.py  collect_hackernews.py  evaluate_safety.py
tests/: test_run_metrics.py
(+143 files in other folders)
