[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftmonitor"
version = "0.1.0"
description = "AI Drift & Safety Monitoring System"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
    "pytrends>=4.8.0",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "pytest>=7.0",
    "requests>=2.28",
    "transformers>=4.30.0",
    "torch>=1.13.0",
    "jinja2>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["driftmonitor*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
